--- a/src/pages/main.astro
+++ b/src/pages/main.astro
@@ -111,8 +111,7 @@ import Layout from '../layouts/Layout.astro';
         position: relative;
         display: flex;
         flex-wrap: wrap;
-        /* gap: 10px; */
-        row-gap: 1vw;
+        row-gap: 9px;
         justify-content: space-between;
     }
 
